# smart_gong

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Readme.md  partitions.csv  sdkconfig  sdkconfig.old
.cache/clangd/index/: CONSTANTS.h.67D4BF93940131AE.idx  controls.h.ACC3EE7B93AF8C71.idx  esp_littlefs.c.2B1C6A3A727827E4.idx  esp_littlefs.c.8F18F38C7FC4E457.idx  esp_littlefs.h.A20DFE91CAC273E3.idx  esp_littlefs.h.AD889D7535F2F9F8.idx  events.c.81CCA0D0FFCB8642.idx  events.h.2126187EC683A556.idx  gong.c.8B0AE0B351F7B356.idx  lfs.c.62C98ED6169B02B9.idx  lfs.c.74C5CA86E90C8BD3.idx  lfs.h.00C0C33C6A945ECB.idx  lfs.h.DA102EC86E7E52A5.idx  lfs_config.c.0BD47D9EEFF52CFD.idx  lfs_config.c.CC3F9857B6EBFEE4.idx  lfs_config.h.D2B7A986F0026DA8.idx  lfs_config.h.EC62A55264304A72.idx  lfs_util.c.F4CCE8B4E80FCF7F.idx  lfs_util.c.F723DB1F78558C02.idx  lfs_util.h.56628C3490B9F6DA.idx  lfs_util.h.BA3AB44B1F5BADFB.idx  libs.h.A2BBC7D751BA2C08.idx  littlefs.c.2385BF82F01D42BD.idx  littlefs.c.BE61A7B0EE83C02E.idx  littlefs.h.7C16260EB794CF72.idx  littlefs_api.h.5DB1E1BDAFB27962.idx  littlefs_api.h.AC2E10A5E596EA13.idx  littlefs_esp_part.c.85FADCE770E20021.idx  littlefs_esp_part.c.BE0CEA1728BBD7BA.idx  main.c.216882A8329F4CAF.idx  server.c.99AE3343F1BFEE9D.idx  server.h.F51C0437A7052E69.idx  (+3 more)
main/: CMakeLists.txt  CONSTANTS.h  Kconfig_example.projbuild  gong.c  idf_component.yml  libs.h
main/controls/: controls.h  main.c
main/events/: events.c  events.h
main/littlefs/: littlefs.c  littlefs.h
main/server/: server.c  server.h  wifi_connection.c
partition/: index.html  script.js
